force-app/main/default/objects/SKU__c/fields/Active_Ingredient__c.field-meta.xml
<CustomField>
    <fullName>Active_Ingredient__c</fullName>
    <label>Active Ingredient</label>
    <length>100</length>
    <type>Text</type>
</CustomField>