force-app/main/default/objects/SKU__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <formula>Sub_brand__r.Brand__r.Name</formula>
    <label>Brand</label>
    <type>Text</type>
</CustomField>