force-app/main/default/objects/SKU__c/fields/Brand_Desc__c.field-meta.xml
<CustomField>
    <fullName>Brand_Desc__c</fullName>
    <label>Brand Desc</label>
    <length>80</length>
    <type>Text</type>
</CustomField>