force-app/main/default/objects/SKU__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <formula>Sub_brand__r.Brand__r.Category__r.Name</formula>
    <label>Category</label>
    <type>Text</type>
</CustomField>