force-app/main/default/objects/SKU__c/fields/Category_Description__c.field-meta.xml
<CustomField>
    <fullName>Category_Description__c</fullName>
    <label>Category Description</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cns</fullName>
            </value>
            <value>
                <fullName>Cold &amp; Flu</fullName>
            </value>
            <value>
                <fullName>Denture Care</fullName>
            </value>
            <value>
                <fullName>Depilatories</fullName>
            </value>
            <value>
                <fullName>Dermatological</fullName>
            </value>
            <value>
                <fullName>Gastrointestinal</fullName>
            </value>
            <value>
                <fullName>Hair Care</fullName>
            </value>
            <value>
                <fullName>Hot Milky Drinks</fullName>
            </value>
            <value>
                <fullName>Juice Drinks</fullName>
            </value>
            <value>
                <fullName>Lip Care</fullName>
            </value>
            <value>
                <fullName>Miscellaneous Products</fullName>
            </value>
            <value>
                <fullName>Mouthspray</fullName>
            </value>
            <value>
                <fullName>Mouthwash</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Out Of Home</fullName>
            </value>
            <value>
                <fullName>Pain Relief</fullName>
            </value>
            <value>
                <fullName>Pain Relief Rx</fullName>
            </value>
            <value>
                <fullName>Professional</fullName>
            </value>
            <value>
                <fullName>Promotional Material</fullName>
            </value>
            <value>
                <fullName>Pronamel</fullName>
            </value>
            <value>
                <fullName>Respiratory Therapy</fullName>
            </value>
            <value>
                <fullName>Respiratory Tract</fullName>
            </value>
            <value>
                <fullName>Smoking Cessation</fullName>
            </value>
            <value>
                <fullName>Sport &amp; Energy</fullName>
            </value>
            <value>
                <fullName>Sports &amp; Energy</fullName>
            </value>
            <value>
                <fullName>Squash</fullName>
            </value>
            <value>
                <fullName>Toothbrush</fullName>
            </value>
            <value>
                <fullName>Toothbrushes</fullName>
            </value>
            <value>
                <fullName>Toothpastes</fullName>
            </value>
            <value>
                <fullName>Vms</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>