force-app/main/default/objects/SKU__c/fields/COGS_per_unit__c.field-meta.xml
<CustomField>
    <fullName>COGS_per_unit__c</fullName>
    <label>COGS per unit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>