force-app/main/default/objects/SKU__c/fields/Container__c.field-meta.xml
<CustomField>
    <fullName>Container__c</fullName>
    <label>Container</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1.5 milligrams</fullName>
            </value>
            <value>
                <fullName>Advertising material</fullName>
            </value>
            <value>
                <fullName>Aerosol</fullName>
            </value>
            <value>
                <fullName>Alcohol</fullName>
            </value>
            <value>
                <fullName>Alcohol free</fullName>
            </value>
            <value>
                <fullName>Bag</fullName>
            </value>
            <value>
                <fullName>Bar</fullName>
            </value>
            <value>
                <fullName>Blister pack</fullName>
            </value>
            <value>
                <fullName>Bottle</fullName>
            </value>
            <value>
                <fullName>Bowl</fullName>
            </value>
            <value>
                <fullName>Box</fullName>
            </value>
            <value>
                <fullName>Can</fullName>
            </value>
            <value>
                <fullName>Carton</fullName>
            </value>
            <value>
                <fullName>Credit note</fullName>
            </value>
            <value>
                <fullName>Divested</fullName>
            </value>
            <value>
                <fullName>Gel</fullName>
            </value>
            <value>
                <fullName>Glass bottle</fullName>
            </value>
            <value>
                <fullName>Jar</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Mint</fullName>
            </value>
            <value>
                <fullName>Mug</fullName>
            </value>
            <value>
                <fullName>No sunscreen</fullName>
            </value>
            <value>
                <fullName>Not used</fullName>
            </value>
            <value>
                <fullName>Not uused</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Pack</fullName>
            </value>
            <value>
                <fullName>Packet</fullName>
            </value>
            <value>
                <fullName>Patch</fullName>
            </value>
            <value>
                <fullName>Plastic bottle</fullName>
            </value>
            <value>
                <fullName>Poppac</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>