force-app/main/default/objects/SKU__c/fields/Flavour__c.field-meta.xml
<CustomField>
    <fullName>Flavour__c</fullName>
    <label>Flavour</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>10 pack</fullName>
            </value>
            <value>
                <fullName>12 pack</fullName>
            </value>
            <value>
                <fullName>2 pack</fullName>
            </value>
            <value>
                <fullName>3 pack</fullName>
            </value>
            <value>
                <fullName>4 pack</fullName>
            </value>
            <value>
                <fullName>Acyclovir</fullName>
            </value>
            <value>
                <fullName>Advertising material</fullName>
            </value>
            <value>
                <fullName>All other flavors</fullName>
            </value>
            <value>
                <fullName>Aloe vera</fullName>
            </value>
            <value>
                <fullName>Amaretto</fullName>
            </value>
            <value>
                <fullName>Apple</fullName>
            </value>
            <value>
                <fullName>Apple &amp; peach</fullName>
            </value>
            <value>
                <fullName>Apple and blackcurrant</fullName>
            </value>
            <value>
                <fullName>Ascorbic acid</fullName>
            </value>
            <value>
                <fullName>Assorted</fullName>
            </value>
            <value>
                <fullName>Banana</fullName>
            </value>
            <value>
                <fullName>Benzalkonium chloride</fullName>
            </value>
            <value>
                <fullName>Berry</fullName>
            </value>
            <value>
                <fullName>Berry fruits</fullName>
            </value>
            <value>
                <fullName>Berryfruit</fullName>
            </value>
            <value>
                <fullName>Blackberry</fullName>
            </value>
            <value>
                <fullName>Blackcurrant</fullName>
            </value>
            <value>
                <fullName>Blackcurrant &amp; cranberry</fullName>
            </value>
            <value>
                <fullName>Blackcurrent</fullName>
            </value>
            <value>
                <fullName>Blueberry</fullName>
            </value>
            <value>
                <fullName>Blueberry &amp; cranberry</fullName>
            </value>
            <value>
                <fullName>Caramel</fullName>
            </value>
            <value>
                <fullName>Caramel Crunch</fullName>
            </value>
            <value>
                <fullName>Caribean crush</fullName>
            </value>
            <value>
                <fullName>Cherry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>