force-app/main/default/objects/SKU__c/fields/Form__c.field-meta.xml
<CustomField>
    <fullName>Form__c</fullName>
    <label>Form</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Advertising material</fullName>
            </value>
            <value>
                <fullName>Assorted</fullName>
            </value>
            <value>
                <fullName>Bar</fullName>
            </value>
            <value>
                <fullName>Bath</fullName>
            </value>
            <value>
                <fullName>Bonbons</fullName>
            </value>
            <value>
                <fullName>Brush</fullName>
            </value>
            <value>
                <fullName>Capsule</fullName>
            </value>
            <value>
                <fullName>Capsules</fullName>
            </value>
            <value>
                <fullName>Cream</fullName>
            </value>
            <value>
                <fullName>Credit note</fullName>
            </value>
            <value>
                <fullName>Dental Sticks</fullName>
            </value>
            <value>
                <fullName>Divested</fullName>
            </value>
            <value>
                <fullName>Drinkable Liquid</fullName>
            </value>
            <value>
                <fullName>Drink Bottle</fullName>
            </value>
            <value>
                <fullName>Drink later</fullName>
            </value>
            <value>
                <fullName>Drink now</fullName>
            </value>
            <value>
                <fullName>Drops</fullName>
            </value>
            <value>
                <fullName>Effervescent tablet</fullName>
            </value>
            <value>
                <fullName>Expanding floss</fullName>
            </value>
            <value>
                <fullName>Floss</fullName>
            </value>
            <value>
                <fullName>Foam</fullName>
            </value>
            <value>
                <fullName>Foam/liquid/towelette</fullName>
            </value>
            <value>
                <fullName>Gel</fullName>
            </value>
            <value>
                <fullName>Granual</fullName>
            </value>
            <value>
                <fullName>Granules</fullName>
            </value>
            <value>
                <fullName>Gum</fullName>
            </value>
            <value>
                <fullName>Inhaler</fullName>
            </value>
            <value>
                <fullName>Interdental</fullName>
            </value>
            <value>
                <fullName>Jelly Beans</fullName>
            </value>
            <value>
                <fullName>Kids strips</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>