force-app/main/default/objects/SKU__c/fields/GH_SubSector_Code__c.field-meta.xml
<CustomField>
    <fullName>GH_SubSector_Code__c</fullName>
    <label>GH SubSector Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>