force-app/main/default/objects/SKU__c/fields/GH_SubSector_Desc__c.field-meta.xml
<CustomField>
    <fullName>GH_SubSector_Desc__c</fullName>
    <label>GH SubSector Desc</label>
    <length>80</length>
    <type>Text</type>
</CustomField>