force-app/main/default/objects/SKU__c/fields/Innovation_Project_Name__c.field-meta.xml
<CustomField>
    <fullName>Innovation_Project_Name__c</fullName>
    <label>Innovation Project Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>