force-app/main/default/objects/SKU__c/fields/Local_Description__c.field-meta.xml
<CustomField>
    <fullName>Local_Description__c</fullName>
    <label>Local Description</label>
    <length>50</length>
    <type>Text</type>
</CustomField>