force-app/main/default/objects/SKU__c/fields/Local_ID__c.field-meta.xml
<CustomField>
    <fullName>Local_ID__c</fullName>
    <label>Local ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>