force-app/main/default/objects/SKU__c/fields/Number_in_SKU__c.field-meta.xml
<CustomField>
    <fullName>Number_in_SKU__c</fullName>
    <label>Number in SKU</label>
    <length>80</length>
    <type>Text</type>
</CustomField>