force-app/main/default/objects/SKU__c/fields/Product_ID__c.field-meta.xml
<CustomField>
    <fullName>Product_ID__c</fullName>
    <formula>VALUE(LEFT(Name, FIND(&quot;.&quot;, Name)))</formula>
    <label>Product_ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>