force-app/main/default/objects/SKU__c/fields/Product_Launch_Year__c.field-meta.xml
<CustomField>
    <fullName>Product_Launch_Year__c</fullName>
    <label>Product Launch Year</label>
    <type>Date</type>
</CustomField>