force-app/main/default/objects/SKU__c/fields/ProductID__c.field-meta.xml
<CustomField>
    <fullName>ProductID__c</fullName>
    <label>ProductID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>