force-app/main/default/objects/SKU__c/fields/Record_Type_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Indicator__c</fullName>
    <label>Record Type Indicator</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CC - Cost Centre</fullName>
            </value>
            <value>
                <fullName>CN - Credit Note</fullName>
            </value>
            <value>
                <fullName>DU - Dummy SKU</fullName>
            </value>
            <value>
                <fullName>FG - Finished Goods</fullName>
            </value>
            <value>
                <fullName>LCP - Locally Customised Pack</fullName>
            </value>
            <value>
                <fullName>NA - Other</fullName>
            </value>
            <value>
                <fullName>PI - Promotional Item</fullName>
            </value>
            <value>
                <fullName>SA - Sample</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>