force-app/main/default/objects/SKU__c/fields/Scent__c.field-meta.xml
<CustomField>
    <fullName>Scent__c</fullName>
    <label>Scent</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Citrus mint</fullName>
            </value>
            <value>
                <fullName>Divested</fullName>
            </value>
            <value>
                <fullName>Extra fresh</fullName>
            </value>
            <value>
                <fullName>Fresh cleanse</fullName>
            </value>
            <value>
                <fullName>Freshmint</fullName>
            </value>
            <value>
                <fullName>Fruit flavour</fullName>
            </value>
            <value>
                <fullName>Heating action</fullName>
            </value>
            <value>
                <fullName>Herbal</fullName>
            </value>
            <value>
                <fullName>Mildmint</fullName>
            </value>
            <value>
                <fullName>Mint</fullName>
            </value>
            <value>
                <fullName>Not used</fullName>
            </value>
            <value>
                <fullName>Orange</fullName>
            </value>
            <value>
                <fullName>Original</fullName>
            </value>
            <value>
                <fullName>Paracetamol</fullName>
            </value>
            <value>
                <fullName>Promotional item</fullName>
            </value>
            <value>
                <fullName>Promotional material</fullName>
            </value>
            <value>
                <fullName>Regular</fullName>
            </value>
            <value>
                <fullName>Smoothmint</fullName>
            </value>
            <value>
                <fullName>Soft mint</fullName>
            </value>
            <value>
                <fullName>Strawberry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>