force-app/main/default/objects/SKU__c/fields/Sector_Desc__c.field-meta.xml
<CustomField>
    <fullName>Sector_Desc__c</fullName>
    <label>Sector Desc</label>
    <length>80</length>
    <type>Text</type>
</CustomField>