force-app/main/default/objects/SKU__c/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <label>Segment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Acne</fullName>
            </value>
            <value>
                <fullName>Add Milk</fullName>
            </value>
            <value>
                <fullName>Adhesives</fullName>
            </value>
            <value>
                <fullName>Adult Dry Mouth</fullName>
            </value>
            <value>
                <fullName>Adult Everyday</fullName>
            </value>
            <value>
                <fullName>Adult Gum Health</fullName>
            </value>
            <value>
                <fullName>Allergy/Sinus</fullName>
            </value>
            <value>
                <fullName>Antacid</fullName>
            </value>
            <value>
                <fullName>Anti Parasite</fullName>
            </value>
            <value>
                <fullName>Anti-Dandruff</fullName>
            </value>
            <value>
                <fullName>Antifungal</fullName>
            </value>
            <value>
                <fullName>anti-perspiration</fullName>
            </value>
            <value>
                <fullName>Arthritis</fullName>
            </value>
            <value>
                <fullName>Back/Join Pain</fullName>
            </value>
            <value>
                <fullName>Battery Disposable Adult</fullName>
            </value>
            <value>
                <fullName>Battery Disposable Kids</fullName>
            </value>
            <value>
                <fullName>Breath Freshening</fullName>
            </value>
            <value>
                <fullName>Calming &amp; Sleeping</fullName>
            </value>
            <value>
                <fullName>Cleansers</fullName>
            </value>
            <value>
                <fullName>Cold Sore Treatments</fullName>
            </value>
            <value>
                <fullName>Cold/Flu</fullName>
            </value>
            <value>
                <fullName>Cough</fullName>
            </value>
            <value>
                <fullName>Decongestion</fullName>
            </value>
            <value>
                <fullName>Depilatories</fullName>
            </value>
            <value>
                <fullName>Dermatological</fullName>
            </value>
            <value>
                <fullName>Dry Mouth</fullName>
            </value>
            <value>
                <fullName>Earcare</fullName>
            </value>
            <value>
                <fullName>Enamel Protection</fullName>
            </value>
            <value>
                <fullName>Energy Drinks</fullName>
            </value>
            <value>
                <fullName>Everyday</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>