force-app/main/default/objects/SKU__c/fields/Site_Item_Code__c.field-meta.xml
<CustomField>
    <fullName>Site_Item_Code__c</fullName>
    <label>Site Item Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>