force-app/main/default/objects/SKU__c/fields/Size_Description__c.field-meta.xml
<CustomField>
    <fullName>Size_Description__c</fullName>
    <label>Size Description</label>
    <length>20</length>
    <type>Text</type>
</CustomField>