force-app/main/default/objects/SKU__c/fields/SKU_Code__c.field-meta.xml
<CustomField>
    <fullName>SKU_Code__c</fullName>
    <label>SKU Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>