force-app/main/default/objects/SKU__c/fields/SKU_Description__c.field-meta.xml
<CustomField>
    <fullName>SKU_Description__c</fullName>
    <label>SKU Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>