force-app/main/default/objects/SKU__c/fields/SKU_Product_ID__c.field-meta.xml
<CustomField>
    <fullName>SKU_Product_ID__c</fullName>
    <label>SKU Product ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>