force-app/main/default/objects/SKU__c/fields/Sub_brand__c.field-meta.xml
<CustomField>
    <fullName>Sub_brand__c</fullName>
    <label>Sub-brand</label>
    <referenceTo>Sub_Brand__c</referenceTo>
    <relationshipLabel>SKUs</relationshipLabel>
    <relationshipName>SKUs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>