force-app/main/default/objects/SKU__c/fields/Sub_Brand_Desc__c.field-meta.xml
<CustomField>
    <fullName>Sub_Brand_Desc__c</fullName>
    <label>Sub Brand Desc</label>
    <length>80</length>
    <type>Text</type>
</CustomField>