force-app/main/default/objects/SKU__c/fields/Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>Tax_Rate__c</fullName>
    <label>% Tax</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0.05</fullName>
            </value>
            <value>
                <fullName>0.10</fullName>
            </value>
            <value>
                <fullName>0.15</fullName>
            </value>
            <value>
                <fullName>0.175</fullName>
            </value>
            <value>
                <fullName>0.20</fullName>
            </value>
            <value>
                <fullName>0.21</fullName>
            </value>
            <value>
                <fullName>0.25</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>