force-app/main/default/objects/SKU__c/fields/Temp__c.field-meta.xml
<CustomField>
    <fullName>Temp__c</fullName>
    <label>Temp</label>
    <length>5</length>
    <type>Text</type>
</CustomField>